log
Wed 20 Mar 2024 08:07:32 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
8070734
Wed 20 Mar 2024 08:09:11 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
4149458
Wed 20 Mar 2024 08:13:06 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
ad12b0a
Wed 20 Mar 2024 08:24:30 PM UTC: 
 exercises.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  3|2
total_score: 40/70
452faf4
Wed 20 Mar 2024 08:26:33 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
a3c6971
Wed 20 Mar 2024 08:50:23 PM UTC: 
 exercises.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
 tests:  7|1
total_score: 60/70
cc6be84
Wed 20 Mar 2024 08:56:01 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:155:5: error: ‘contador’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
  155 |   if(contador == 0)
      |     ^
cc1: all warnings being treated as errors
Compilation failed
209258b
Wed 20 Mar 2024 08:56:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
339e993
Wed 20 Mar 2024 08:57:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
ccb945b
Sat 23 Mar 2024 06:47:13 PM UTC: 
 exercises.c | 40 ++++++++--------------------------------
 1 file changed, 8 insertions(+), 32 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:143:5: error: expected expression before ‘}’ token
  143 |     }
      |     ^
exercises.c:134:9: error: unused variable ‘dato2’ [-Werror=unused-variable]
  134 |   char* dato2;
      |         ^~~~~
exercises.c:144:1: error: control reaches end of non-void function [-Werror=return-type]
  144 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3ea7295
Sat 23 Mar 2024 06:49:26 PM UTC: 
 exercises.c | 34 ++++++++++++++++++++++++++--------
 1 file changed, 26 insertions(+), 8 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:137:23: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  137 |         push(P, cadena[i]);
      |                 ~~~~~~^~~
      |                       |
      |                       char
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘char’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
0437ecc
Sat 23 Mar 2024 06:50:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b4c6423
Sat 23 Mar 2024 06:53:59 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
f31227f
Sat 23 Mar 2024 06:54:52 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
449ec41
Sat 23 Mar 2024 07:00:17 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
0628ddb
Sat 23 Mar 2024 07:04:31 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 60/70
9e55621
